# Mobile_System_Control

./: .gitignore  README.md  install.sh
Kanayama_control_ex/: CMakeLists.txt  Kanayama.launch  package.xml
Kanayama_control_ex/include/Kanayama_control_ex/: Kanayama_controller.h
Kanayama_control_ex/src/: Kanayama_controller.cpp  main.cpp
MPC_control_ex/: CMakeLists.txt  MPC.launch  install.sh  package.xml
MPC_control_ex/include/MPC_control_ex/: MPC_controller.h
MPC_control_ex/src/: MPC_controller.cpp  main.cpp
PID_control_ex/: CMakeLists.txt  PID.launch  package.xml
PID_control_ex/include/PID_control_ex/: PID_controller.h
PID_control_ex/src/: PID_controller.cpp  main.cpp
PurePursuit_control_ex/: CMakeLists.txt  PurePursuit.launch  package.xml
PurePursuit_control_ex/include/PurePursuit_control_ex/: PurePursuit_controller.h
PurePursuit_control_ex/src/: PurePursuit_controller.cpp  main.cpp
carla_ros_bridge/Python/: waypoint_checker.py  waypoint_generator.py
carla_ros_bridge/carla_manual_control/src/carla_manual_control/: carla_manual_control.py
carla_ros_bridge/carla_spawn_objects/config/: algorithm_test.json  base.json  camera.json  ego.json  gps.json  imu.json  lidar.json  mobile_system_control.json  mobile_system_control_final.json  spawn_point.json
carla_ros_bridge/carla_spawn_objects/launch/: carla_spawn_objects.launch  tf.launch
carla_ros_bridge/mobile_system_control/src/mobile_system_control/: main.cpp  mobile_system_control.cpp
carla_ros_bridge/mobile_system_control_vis/launch/: mobile_system_control_vis.launch
carla_ros_bridge/mobile_system_control_vis/rviz/: track.rviz
carla_ros_bridge/mobile_system_control_vis/scripts/: mobile_system_control_vis.py
carla_ros_bridge/mobile_system_control_vis/track/: reference_path.csv
carla_ros_bridge/python example/: config.py  scenario_runner.py  spawn_npc.py  spawn_npc_waypoint.py  waypoint_display.py  waypoint_generator.py  waypoint_generator_two_point.py
carla_ros_bridge/python example/scenario/: scenario_1.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json
ros_carla_bridge/mobile_system_control/: CMakeLists.txt  package.xml
ros_carla_bridge/mobile_system_control/include/mobile_system_control/: mobile_system_control.h
ros_carla_bridge/mobile_system_control/launch/: mobile_system.launch
ros_carla_bridge/mobile_system_control/src/mobile_system_control/: mobile_system_control.cpp
track/: reference_path.csv
